--- a/assets/myapp/templates/index.html
+++ b/assets/myapp/templates/index.html
@@ -10,11 +10,14 @@
 {% endblock %}
 
 {% block content %}
-    <div class ="banner">
-        <h1>Your Projects</h1>
+    <div class="banner">
+        <div class="banner-content">
+            <h1>Your Projects</h1>
+            <div class="create-button">New</div>
+        </div>
     </div>
+
     <div class="main-content">
-        <h1>Welcome to HistoryGraphy</h1>
-        <p>This is the homepage of your new Django website. Enjoy exploring!</p>
+
     </div>
 {% endblock %}
