--- a/assets/myapp/templates/base.html
+++ b/assets/myapp/templates/base.html
@@ -18,6 +18,8 @@
             </ul>
             <ul class="right">
                 <li><a href="/login/">Login</a></li>
+                <li><a href="/create-account/">Sign up</a></li>
+
             </ul>
         </nav>
     </header>
