--- a/assets/myapp/templates/base.html
+++ b/assets/myapp/templates/base.html
@@ -17,8 +17,8 @@
                 <li><a href="/">HistoryGraphy</a></li>
             </ul>
             <ul class="right">
-                <li><a href="/login/">Login</a></li>
-                <li><a href="/create-account/">Sign up</a></li>
+                <li><a href="/login-page/">Login</a></li>
+                <li><a href="/create-account-page/">Sign up</a></li>
 
             </ul>
         </nav>
