--- a/assets/myapp/templates/index.html
+++ b/assets/myapp/templates/index.html
@@ -16,8 +16,10 @@
             <div class="create-button">New</div>
         </div>
     </div>
-
+    <main>
     <div class="main-content">
-
+        <h1>Welcome to HistoryGraphy</h1>
+        <p>This is the homepage of your new Django website. Enjoy exploring!</p>
     </div>
+</main>
 {% endblock %}
