--- a/assets/myapp/templates/base.html
+++ b/assets/myapp/templates/base.html
@@ -17,20 +17,36 @@
                 <li><a href="/">HistoryGraphy</a></li>
             </ul>
             <ul class="right">
-                <li><a href="/login-page/">Login</a></li>
-                <li><a href="/create-account-page/">Sign up</a></li>
+                {% if user.is_authenticated %}
+                    <label for="profile-modal">
+                        <img src="{% static 'myapp/profile-user.png' %}" alt="User Icon" class="user-icon">
+                    </label>
+                {% else %}
+                    <li><a href="/login-page/">Login</a></li>
+                    <li><a href="/create-account-page/">Sign up</a></li>
+                {% endif %}
 
             </ul>
         </nav>
     </header>
+
+
+    <input type="checkbox" id="profile-modal" style="display: none;">
+    
+    <div class="modal-overlay"></div>
+    <div class="modal">
+        <h2>User Profile</h2>
+        <p>Name: {{ user.username }}</p>
+        <p>Email: {{ user.email }}</p>
+        <a href="/logout_user/" class="modal-close">Logout</a>
+        <label for="profile-modal" class="modal-close">Close</label>
+    </div>
 
     <main>
         {% block content %}
         {% endblock %}
     </main>
     
-    <!-- <footer>
-        <p>&copy; 2024 HistoryGraphy. All rights reserved.</p>
-    </footer> -->
+
 </body>
 </html>
