--- a/assets/myapp/templates/index.html
+++ b/assets/myapp/templates/index.html
@@ -11,11 +11,11 @@
     <div class="banner">
         <div class="banner-content">
             <h1>Your Projects</h1>
-            <label for="create-project" class="create-button">New</label>
+            <label for="popup" class="create-button">New</label>
         </div>
     </div>
 
-    <input type="checkbox" id="create-project" style="display: none;">
+    <input type="checkbox" id="popup" style="display: none;">
     <div class="project-model-overlay"></div>
     <div class="project-model">
         <h1>Create Project</h1>
